--- a/public_html/index.html
+++ b/public_html/index.html
@@ -130,15 +130,15 @@
                                 <label for="telefono">Telefono Trabajo:</label>
                                 <input type="text" class="form-control" id="telefono" placeholder="Telefono Trabajo">
                             </div>
- 
+
                             <div class="form-group" id="groupCelular">
                                 <label for="celular">Celular:</label>
                                 <input type="text" class="form-control" id="celular" placeholder="Celular">
                             </div>
-                            
+
                             <div class="form-group">
                                 <input type="hidden" value="agregarPersona" id="personasAction"/>
-                                <button type="submit" class="btn btn-primary" id="enviar">Guardar</button>
+                                <button type="submit" class="btn btn-primary dark" id="enviar">Guardar</button>
                                 <button type="reset" class="btn btn-danger" id="cancelar">Cancelar</button>
                             </div>
 
@@ -156,21 +156,21 @@
         </div>
         <!--    Modal LogIn   -->
         <div class="modal fade" id="myModalIngresar" role="dialog">
-            <div class="modal-dialog">
+            <div class="modal-dialog">                
                 <div class="loginmodal-container">
-                    <h1>Login to Your Account</h1><br>
+                    <h1>Ingresa a tu cuenta</h1><br>
                     <form>
-                        <input type="text" name="user" placeholder="Username">
-                        <input type="password" name="pass" placeholder="Password">
-                        <input type="submit" name="login" class="login loginmodal-submit" value="Login">
+                        <input type="text" name="user" placeholder="Usuario">
+                        <input type="password" name="pass" placeholder="Contraseña">
+                        <input type="submit" name="login" class="login loginmodal-submit dark" value="Login">
                     </form>
 
                     <div class="login-help">
-                        <a href="#">Register</a> - <a href="#">Forgot Password</a>
-                    </div>
+                        <a href="#" id="btMostarForm1">¿Aún no tienes cuenta? Regístrate!</a>
+                    </div> 
                 </div>
             </div>
-        </div>        
+        </div>     
         <!-- Carousel
         ================================================== -->
         <div id="myCarousel" class="carousel slide">
