--- a/public_html/index.html
+++ b/public_html/index.html
@@ -305,6 +305,72 @@
 
 
         </div><!-- /.container -->
+
+        <!-- VENTANA CHAT -->
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="round hollow text-center">
+                    <a href="#" id="addClass"><span class="glyphicon glyphicon-comment"></span> Abrir chat </a>
+                </div>
+                <hr>
+            </div>
+        </div>
+        <div class="popup-box chat-popup" id="qnimate">
+            <div class="popup-head">
+                <div class="popup-head-left pull-left"><img src="Imagenes/experto.png" alt="experto"> Experto</div>
+                <div class="popup-head-right pull-right">
+                    <div class="btn-group">
+                        <button class="chat-header-button" data-toggle="dropdown" type="button" >
+                            <i class="glyphicon glyphicon-cog"></i> </button>
+                        <ul role="menu" class="dropdown-menu pull-right">
+                            <li><a href="#">Media</a></li>
+                            <li><a href="#">Block</a></li>
+                            <li><a href="#">Clear Chat</a></li>
+                            <li><a href="#">Email Chat</a></li>
+                        </ul>
+                    </div>
+
+                    <button data-widget="remove" id="removeClass" class="chat-header-button pull-right" type="button"><i class="glyphicon glyphicon-off"></i></button>
+                </div>
+            </div>
+            <div class="popup-messages">
+                <div class="direct-chat-messages">
+                    <div class="chat-box-single-line">
+                        <abbr class="timestamp">2 octubre 2016</abbr>
+                    </div>
+                    <!-- Message. Default to the left -->
+                    <div class="direct-chat-msg doted-border">
+                        <div class="direct-chat-info clearfix">
+                            <span class="direct-chat-name pull-left">Experto</span>
+                        </div>
+                        <!-- /.direct-chat-info -->
+                        <img alt="message user image" src="Imagenes/experto.png" class="direct-chat-img"><!-- /.direct-chat-img -->
+                        <div class="direct-chat-text">
+                            Hola, en qué te puedo ayudar?
+                        </div>
+                        <div class="direct-chat-info clearfix">
+                            <span class="direct-chat-timestamp pull-right">3.36 PM</span>
+                        </div>
+                        <div class="direct-chat-info clearfix">
+                            <span class="direct-chat-img-reply-small pull-left">
+
+                            </span>
+                        </div>
+                        <!-- /.direct-chat-text -->
+                    </div>
+                </div>
+            </div>
+            <div class="popup-messages-footer">
+                <textarea id="status_message" placeholder="Escribe tu mensaje..." rows="10" cols="40" name="message"></textarea>
+                <div class="btn-footer">
+                    <button class="bg_none"><i class="glyphicon glyphicon-film"></i> </button>
+                    <button class="bg_none"><i class="glyphicon glyphicon-camera"></i> </button>
+                    <button class="bg_none"><i class="glyphicon glyphicon-paperclip"></i> </button>
+                    <button class="bg_none pull-right"><i class="glyphicon glyphicon-thumbs-up"></i> </button>
+                </div>
+            </div>
+        </div>        
         <footer class="text-center">
             <p class="pull-right"><a href="#">Back to top</a></p>
             <div class="social">
@@ -322,83 +388,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/script.js" type="text/javascript"></script>
-        <script>
-                            // This example adds a search box to a map, using the Google Place Autocomplete
-                            // feature. People can enter geographical searches. The search box will return a
-                            // pick list containing a mix of places and predicted search terms.
-
-                            // This example requires the Places library. Include the libraries=places
-                            // parameter when you first load the API. For example:
-                            // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-
-                            function initAutocomplete() {
-                                var map = new google.maps.Map(document.getElementById('map'), {
-                                    center: {lat: -33.8688, lng: 151.2195},
-                                    zoom: 13,
-                                    mapTypeId: 'roadmap'
-                                });
-
-                                // Create the search box and link it to the UI element.
-                                var input = document.getElementById('pac-input');
-                                var searchBox = new google.maps.places.SearchBox(input);
-                                map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-
-                                // Bias the SearchBox results towards current map's viewport.
-                                map.addListener('bounds_changed', function () {
-                                    searchBox.setBounds(map.getBounds());
-                                });
-
-                                var markers = [];
-                                // Listen for the event fired when the user selects a prediction and retrieve
-                                // more details for that place.
-                                searchBox.addListener('places_changed', function () {
-                                    var places = searchBox.getPlaces();
-
-                                    if (places.length == 0) {
-                                        return;
-                                    }
-
-                                    // Clear out the old markers.
-                                    markers.forEach(function (marker) {
-                                        marker.setMap(null);
-                                    });
-                                    markers = [];
-
-                                    // For each place, get the icon, name and location.
-                                    var bounds = new google.maps.LatLngBounds();
-                                    places.forEach(function (place) {
-                                        if (!place.geometry) {
-                                            console.log("Returned place contains no geometry");
-                                            return;
-                                        }
-                                        var icon = {
-                                            url: place.icon,
-                                            size: new google.maps.Size(71, 71),
-                                            origin: new google.maps.Point(0, 0),
-                                            anchor: new google.maps.Point(17, 34),
-                                            scaledSize: new google.maps.Size(25, 25)
-                                        };
-
-                                        // Create a marker for each place.
-                                        markers.push(new google.maps.Marker({
-                                            map: map,
-                                            icon: icon,
-                                            title: place.name,
-                                            position: place.geometry.location
-                                        }));
-
-                                        if (place.geometry.viewport) {
-                                            // Only geocodes have viewport.
-                                            bounds.union(place.geometry.viewport);
-                                        } else {
-                                            bounds.extend(place.geometry.location);
-                                        }
-                                    });
-                                    map.fitBounds(bounds);
-                                });
-                            }
-
-        </script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBd2LzkTQ5I4l3cbjaQE8_6Q3unyhSxBS0&libraries=places&callback=initAutocomplete"
         async defer></script>
     </body>
